--- a/templates/block/block--slider.html.twig
+++ b/templates/block/block--slider.html.twig
@@ -19,7 +19,8 @@
     'block-' ~ plugin_id|clean_class,
     bundle ? 'block--type-' ~ bundle|clean_class,
     view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
-    content['#block_content'].field_slider_text_style.value
+    content['#block_content'].field_slider_text_style.value,
+	'ucb-slider-block'
   ]
 %}
 
