--- a/css/block/slider.css
+++ b/css/block/slider.css
@@ -66,6 +66,7 @@ a.slide-link {
   background-color: rgba(0, 0, 0, 0.7);
   text-align: left;
   padding: 1rem;
+  height: 100%;
 }
 
 .center-overlay .carousel-inner .carousel-caption {
