--- a/css/block/slider.css
+++ b/css/block/slider.css
@@ -66,7 +66,6 @@ a.slide-link {
   background-color: rgba(0, 0, 0, 0.7);
   text-align: left;
   padding: 1rem;
-  height: 100%;
 }
 
 .center-overlay .carousel-inner .carousel-caption {
@@ -85,6 +84,10 @@ a.slide-link {
   position: relative;
   max-width: 400px;
   width: 100%;
+}
+
+.right-content .slide-image-container {
+  padding-bottom: 0px;
 }
 
 .right-content .carousel-inner {
@@ -106,6 +109,7 @@ a.slide-link {
 
 .slide-image-container {
   flex-grow: 1;
+  padding-bottom: 20px;
 }
 
 .bottom-content .carousel-inner .carousel-caption {
