--- a/css/block/content-row.css
+++ b/css/block/content-row.css
@@ -19,6 +19,12 @@
   border-bottom: 2px solid rgba(128, 128, 128, 0.333);
   margin-bottom: 20px;
 }
+
+.teaser-row{
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+}
+
 .ucb-content-row-teaser{
   display: flex;
   flex-direction: column;
@@ -141,6 +147,12 @@
 
   .small-feature:last-child {
     padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 975px) {
+  .teaser-row{
+    flex-direction: column-reverse;
   }
 }
 @media screen and (max-width: 576px) {
