--- a/templates/block/block--content-row.html.twig
+++ b/templates/block/block--content-row.html.twig
@@ -58,11 +58,21 @@
 			{% for key, item in content['#block_content'].field_row_layout_content %}
 				{% set rowLink = item.entity.field_row_layout_content_link.0.url|render %}
 				<div class="row-content ucb-content-row-teaser">{% set image = item.entity.field_row_layout_content_image.0 %}
-					<div class="row">
+					<div class="row teaser-row">
+						<div class="{{ image ? 'col-sm-10 ' : 'col-sm-12' }} row-text-container">
+							{% if rowLink %}
+								<a href="{{ rowLink }} ">
+									<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
+								</a>
+							{% else %}
+								<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
+							{% endif %}
+							{{item.entity.field_row_layout_content_text|view}}
+						</div>
 					{% if image %}
 					<div class="col-sm-2 row-image-container">
 						{% if rowLink %}
-							<a href="{{ rowLink }} ">
+							<a role="presentation" aria-hidden="true" href="{{ rowLink }} ">
 								{{ image|view }}
 							</a>
 						{% else %}
@@ -70,16 +80,6 @@
 						{% endif %}
 					</div>
 					{% endif %}
-					<div class="{{ image ? 'col-sm-10 ' : 'col-sm-12' }} row-text-container">
-						{% if rowLink %}
-							<a href="{{ rowLink }} ">
-								<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
-							</a>
-						{% else %}
-							<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
-						{% endif %}
-						{{item.entity.field_row_layout_content_text|view}}
-					</div>
 					</div>
 				</div>
 			{% endfor %}
@@ -94,7 +94,7 @@
 						{% if image %}
 						<div class="col-sm-5 col-xs-12 row-image-container-lg">
 							{% if rowLink %}
-								<a href="{{ rowLink }} ">
+								<a role="presentation" aria-hidden="true" href="{{ rowLink }} ">
 									<img alt="{{item.entity.field_row_layout_content_image.entity.field_media_image.alt}}" class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
 								</a>
 							{% else %}
