--- a/templates/block/block--content-row.html.twig
+++ b/templates/block/block--content-row.html.twig
@@ -263,17 +263,6 @@
 			{% set rowLink = item.entity.field_row_layout_content_link.0.url|render %}
 			<div class="row row-content ucb-teaser-lg-row">
 			{% set image = item.entity.field_row_layout_content_image.0 %}
-				{% if image %}
-				<div class="col-lg-4 col-md-6 col-sm-12 row-image-container-lg">
-					{% if rowLink %}
-						<a href="{{ rowLink }} ">
-							<img alt="{{item.entity.field_row_layout_content_image.entity.field_media_image.alt}}" class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
-						</a>
-					{% else %}
-						{{ image|view }}
-					{% endif %}
-				</div>
-				{% endif %}
 				<div class="{{ image ? 'col-lg-8 col-md-6 col-sm-12' : 'col-sm-12' }} row-text-container">
 					{% if rowLink %}
 						<a href="{{ rowLink }} ">
@@ -284,6 +273,17 @@
 					{% endif %}
 					{{item.entity.field_row_layout_content_text|view}}
 				</div>
+				{% if image %}
+				<div class="col-lg-4 col-md-6 col-sm-12 row-image-container-lg">
+					{% if rowLink %}
+						<a role="presentation" aria-hidden="true" href="{{ rowLink }} ">
+							<img alt="{{item.entity.field_row_layout_content_image.entity.field_media_image.alt}}" class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
+						</a>
+					{% else %}
+						{{ image|view }}
+					{% endif %}
+				</div>
+				{% endif %}
 			</div>
 		{% endfor %}
 		{% endif %}
