--- a/templates/block/block--content-row.html.twig
+++ b/templates/block/block--content-row.html.twig
@@ -118,21 +118,7 @@
 			{% for key, item in content['#block_content'].field_row_layout_content %}
 				{% set rowLink = item.entity.field_row_layout_content_link.0.url|render %}
 				{% set tileBackground = "height:100%;background-image:url('" ~ file_url(item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square')) ~ "');background-repeat:no-repeat;background-position:center;background-size:cover;" %}
-				<div class="row d-flex row-content-tiles">
-					{% if (loop.index is odd) %}
-						<div class="col-6 row-image-container-tile-odd">
-							{% if rowLink %}
-								<a href="{{ rowLink }} ">
-									{# TO DO -- Make this a DIV with background img #}
-									{# {{ item.entity.field_row_layout_content_image|view }} #}
-									<div class="ucb-content-row-left" style={{tileBackground}}></div>
-								</a>
-							{% else %}
-								{# TO DO -- Make this a DIV with background img #}
-								{# {{ item.entity.field_row_layout_content_image|view }} #}
-								<div style={{tileBackground}}></div>
-							{% endif %}
-						</div>
+				<div class="row d-flex row-content-tiles {{(loop.index is odd) ? 'row-content-tile-odd' : 'row-content-tile-even'}}">
 						<div class="col-6 row-text-container-tile">
 							{% if rowLink %}
 								<a href="{{ rowLink }} ">
@@ -143,20 +129,9 @@
 							{% endif %}
 							{{item.entity.field_row_layout_content_text|view}}
 						</div>
-					{% else %}
-						<div class="col-6 row-text-container-tile">
+						<div class="col-6 row-image-container-tile-{{(loop.index is odd) ? 'odd' : 'even'}}">
 							{% if rowLink %}
-								<a href="{{ rowLink }} ">
-									<h3>{{item.entity.field_row_layout_content_title.0.value }}</h3>
-								</a>
-							{% else %}
-								<h3>{{item.entity.field_row_layout_content_title.0.value }}</h3>
-							{% endif %}
-							{{item.entity.field_row_layout_content_text|view}}
-						</div>
-						<div class="col-6 row-image-container-tile-even">
-							{% if rowLink %}
-								<a href="{{ rowLink }} ">
+								<a role="presentation" aria-hidden="true" href="{{ rowLink }} ">
 									{# TO DO -- Make this a DIV with background img #}
 									{# {{ item.entity.field_row_layout_content_image|view }} #}
 									<div style="{{tileBackground}}"></div>
@@ -167,7 +142,6 @@
 								<div style="{{tileBackground}}"></div>
 							{% endif %}
 						</div>
-					{% endif %}
 				</div>
 			{% endfor %}
 			{# Features Row Layout #}
