--- a/templates/block/block--content-grid.html.twig
+++ b/templates/block/block--content-grid.html.twig
@@ -76,7 +76,7 @@
             {% set title = item.entity.field_grid_layout_content_title.value %}
             {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
             {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
-            {% set link = item.entity.field_grid_layout_content_link.0.url.uri %}
+            {% set link = item.entity.field_grid_layout_content_link.0.url|render %}
             {% set containerTag = link ? 'a' : 'span' %}
             <div class="col">
               <div class="grid-column">
@@ -112,7 +112,7 @@
             {% else %}
               {% set imgUrl = null %}
             {% endif %}
-            {% set link = item.entity.field_grid_layout_content_link.0.url.uri %}
+            {% set link = item.entity.field_grid_layout_content_link.0.url|render %}
             {% set containerTag = link ? 'a' : 'span' %}
             <div class="d-flex flex-column-reverse justify-content-end">
               {% if title %}
@@ -149,7 +149,7 @@
               {% else %}
                 {% set imgUrl = null %}
               {% endif %}
-              {% set link = item.entity.field_grid_layout_content_link.0.url.uri %}
+              {% set link = item.entity.field_grid_layout_content_link.0.url|render %}
               {% set containerTag = link ? 'a' : 'span' %}
               <div class="d-flex flex-column-reverse justify-content-end">
                 {% if title %}
