CuBoulder/tiamat-theme#931 Changes basic page title to enhance accessibility

--- a/templates/content/node--basic-page.html.twig
+++ b/templates/content/node--basic-page.html.twig
@@ -79,6 +79,9 @@
 ] %}
 
 <article{{ attributes.addClass(classes) }}>
+  <h1 class="sr-only">
+    {{ label }}
+  </h1>
   {% if content %}
     <div{{ content_attributes }}>
       {{ content }}
