CuBoulder/tiamat-theme#948 Cleans up Collection Grid block template

--- a/templates/block/block--collection-grid.html.twig
+++ b/templates/block/block--collection-grid.html.twig
@@ -1,33 +1,36 @@
-{%
-    set classes = [
-      'block',
-      'container',
-      'block-' ~ configuration.provider|clean_class,
-      'block-' ~ plugin_id|clean_class,
-      bundle ? 'block--type-' ~ bundle|clean_class,
-      view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
-  ]
-  %}
+{#
+/**
+ * @file Contains the template to display the Collection Grid block.
+ */
+#}
+
+{{ attach_library('boulder_base/ucb-collections-block') }}
+
+{% set classes = [
+  'block',
+  'container',
+  'block-' ~ configuration.provider|clean_class,
+  'block-' ~ plugin_id|clean_class,
+  bundle ? 'block--type-' ~ bundle|clean_class,
+  view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
+] %}
 
 {# This block mirrors the Article List Node - constructs a JSON endpoint in TWIG using include filters #}
-{% set collectionsCatsJSON = (url('<front>')|render|trim('/'))
-    ~ '/jsonapi/taxonomy_term/collection_category'
-    
-  %}
+{% set collectionsCatsJSON = url('<front>')|render|trim('/')
+  ~ '/jsonapi/taxonomy_term/collection_category'
+%}
 {# JSON API Endpoint information #}
-{% set collectionsJSON = (url('<front>')|render|trim('/'))
-    ~ '/jsonapi/node/collection_item_page'
+{% set collectionsJSON = url('<front>')|render|trim('/')
+  ~ '/jsonapi/node/collection_item_page'
   ~ '?sort=title'
-    ~ '&include=field_collection_item_thumbnail.field_media_image'
-    ~ '&fields[file--file]=uri,url,alt'
-  %}
+  ~ '&include=field_collection_item_thumbnail.field_media_image'
+  ~ '&fields[file--file]=uri,url,alt'
+%}
 
-{% set baseurlJSON = (url('<front>')|render|trim('/'))
-  %}
+{% set baseurlJSON = url('<front>')|render|trim('/') %}
 
 {% set includeTags = "" %}
 {% set myTypes = content.field_collection_grid_type %}
-
 
 {% set filterItemsStyle = "collection-filter-hide" %}
 {% if content.field_collections_filter|render|striptags|trim == "Fade Items" %}
@@ -39,24 +42,20 @@
   {% set multiselectStyle = "collection-multiselect-multi" %}
 {% endif %}
 
-
 {% set displayStyle = "show" %}
 {% if content.field_collections_display|render|striptags|trim == "Hide" %}
   {% set displayStyle = "hide" %}
 {% endif %}
 
-{% set blockID =  elements.content['#block_content'].id() %}
-
-{{ attach_library('boulder_base/ucb-collections-block') }}
+{% set blockID = elements.content['#block_content'].id() %}
 
 {# Block/Title/Icon Styles #}
 {% set blockStyles = [
-	content.field_bs_background_style|render|striptags|trim,
-	content.field_bs_content_font_scale|render|striptags|trim,
-	content.field_bs_icon_position|render|striptags|trim,
-	content.field_bs_heading_alignment|render|striptags|trim,
-	content.field_bs_title_font_scale|render|striptags|trim,
-	''
+  content.field_bs_background_style|render|striptags|trim,
+  content.field_bs_content_font_scale|render|striptags|trim,
+  content.field_bs_icon_position|render|striptags|trim,
+  content.field_bs_heading_alignment|render|striptags|trim,
+  content.field_bs_title_font_scale|render|striptags|trim,
 ] %}
 
 {% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
@@ -65,79 +64,69 @@
 {% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
 
 {% block content %}
-	<div{{attributes.addClass(classes,blockStyles)}}>
-		{{ title_prefix }}
-		{% if label %}
-			<div class="block-title {{ headingStyle }}">
-				<{{ headingTag }}{{title_attributes}}>
-					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-						{{ content.field_bs_icon }}
-					</span>
-					<span class="block-title-text">
-						{{ label }}
-					</span>
-				</{{ headingTag }}>
-			</div>
-		{% endif %}
-		{{ title_suffix }}
-    <collection-grid data-blockid = "{{blockID}}">
-      <div class="collection-grid-container collection-grid-container-{{blockID}} {{filterItemsStyle}} {{multiselectStyle}}">
-        <div
-          class="collection-filter-container">
+  <div{{ attributes.addClass(classes, blockStyles) }}>
+    {{ title_prefix }}
+    {% if label %}
+      <div class="block-title {{ headingStyle }}">
+        <{{ headingTag }}{{ title_attributes }}>
+          <span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
+            {{ content.field_bs_icon }}
+          </span>
+          <span class="block-title-text">
+            {{ label }}
+          </span>
+        </{{ headingTag }}>
+      </div>
+    {% endif %}
+    {{ title_suffix }}
+    <collection-grid data-blockid="{{ blockID }}">
+      <div class="collection-grid-container collection-grid-container-{{ blockID }} {{ filterItemsStyle }} {{ multiselectStyle }}">
+        <div class="collection-filter-container">
           {# Single Select List #}
           {% if multiselectStyle == "collection-multiselect-single" %}
             <div class="collections-filter-list">
               {% for key, item in content['#block_content'].field_collection_category_select %}
-                {%  if key|first != '#' %}
-                  <div class="collection-grid-filters">
-                    <h3 class="category-filter-label">{{item.entity.field_collection_filter_label.value }}
-                    </h3>
-                    <div class="collection-category-container">
-                      <div class="collection-filter-links">
-                        <button class="category-single-button collection-grid-single-active category-single-button-all-{{ blockID }}" onclick="resetSingleFilters({{ blockID }})">All</button>
-                        {% for key, cat in item.entity.field_collection_grid_category %}
-                          {%  if key|first != '#' %}
-                            <button class="category-single-button collection-grid-no-display category-label-reset-{{ blockID }} category-label-{{ cat|view }}-{{ blockID }}" data-category="{{ cat|view }}" onclick="filterSingle({{ cat|view }}, {{ blockID }})"></button>
-                          {% endif %}
-                        {% endfor %}
-                      </div>
-                    </div>
-                  </div>
-
-                {% endif %}
-              {% endfor %}
-              {#<input type="reset" value="Reset Filters" class="category-filter-reset" onclick = "resetFilters()" ></input>#}
-            </div>
-          {% elseif multiselectStyle == "collection-multiselect-multi" %}
-
-            {% for key, item in content['#block_content'].field_collection_category_select %}
-              {%  if key|first != '#' %}
-                <div class="collection-filter-links">
-                  <h3 class="category-filter-label">{{item.entity.field_collection_filter_label.value }}
+                <div class="collection-grid-filters">
+                  <h3 class="category-filter-label">
+                    {{ item.entity.field_collection_filter_label.value }}
                   </h3>
                   <div class="collection-category-container">
-                    {% for key2, cat in item.entity.field_collection_grid_category %}
-                      {%  if key2|first != '#' %}
-                        <div class="collection-category-line">
-                          <input id = "category-checkbox-{{blockID}}-{{key}}-{{key2}}" class="category-checkbox collection-grid-no-display category-checkbox-{{ blockID }}" type="checkbox" data-category="{{ cat|view }}" onclick="filterChecked({{ blockID }})">
-                          
-                          <label class="category-label category-label-{{ cat|view }}-{{ blockID }}" for ="category-checkbox-{{blockID}}-{{key}}-{{key2}}" data-category="{{ cat|view }}-label"></label>
-                        </div>
-                      {% endif %}
-                    {% endfor %}
+                    <div class="collection-filter-links">
+                      <button class="category-single-button collection-grid-single-active category-single-button-all-{{ blockID }}" onclick="resetSingleFilters({{ blockID }})">All</button>
+                      {% for key, cat in item.entity.field_collection_grid_category %}
+                        <button class="category-single-button collection-grid-no-display category-label-reset-{{ blockID }} category-label-{{ cat|view }}-{{ blockID }}" data-category="{{ cat|view }}" onclick="filterSingle({{ cat|view }}, {{ blockID }})"></button>
+                      {% endfor %}
+                    </div>
                   </div>
                 </div>
-
-              {% endif %}
+              {% endfor %}
+              {# <input type="reset" value="Reset Filters" class="category-filter-reset" onclick="resetFilters()"></input> #}
+            </div>
+          {% elseif multiselectStyle == "collection-multiselect-multi" %}
+            {% for key, item in content['#block_content'].field_collection_category_select %}
+              <div class="collection-filter-links">
+                <h3 class="category-filter-label">
+                  {{ item.entity.field_collection_filter_label.value }}
+                </h3>
+                <div class="collection-category-container">
+                  {% for key2, cat in item.entity.field_collection_grid_category %}
+                    <div class="collection-category-line">
+                      <input id="category-checkbox-{{ blockID }}-{{ key }}-{{ key2 }}" class="category-checkbox collection-grid-no-display category-checkbox-{{ blockID }}" type="checkbox" data-category="{{ cat|view }}" onclick="filterChecked({{ blockID }})">
+                      <label class="category-label category-label-{{ cat|view }}-{{ blockID }}" for ="category-checkbox-{{ blockID }}-{{ key }}-{{ key2 }}" data-category="{{ cat|view }}-label"></label>
+                    </div>
+                  {% endfor %}
+                </div>
+              </div>
             {% endfor %}
             <input type="reset" value="Reset Filters" class="category-filter-reset category-filter-reset-{{ blockID }}" onclick="resetFilters({{ blockID }})"></input>
-        {% endif %}
-      </div>
-      <div class="collection-grid-card-wrapper">
-        <div class="collection-grid-filter-checks">
-        <span hidden class="collection-grid-filter-span-{{ blockID }}"></span>
+          {% endif %}
         </div>
-        <div id="collections-grid-block-data-{{blockID}}" data-jsonapi="{{ collectionsJSON }}" data-jsoncats="{{ collectionsCatsJSON }}" data-extags="{{ content.field_collection_grid_type|render|striptags|trim}}" data-bodydisplay="{{ displayStyle }}" data-baseurl = {{ baseurlJSON}} class="collections-grid-block-data"></div>
+        <div class="collection-grid-card-wrapper">
+          <div class="collection-grid-filter-checks">
+            <span hidden class="collection-grid-filter-span-{{ blockID }}"></span>
+          </div>
+          <div id="collections-grid-block-data-{{ blockID }}" data-jsonapi="{{ collectionsJSON }}" data-jsoncats="{{ collectionsCatsJSON }}" data-extags="{{ content.field_collection_grid_type|render|striptags|trim }}" data-bodydisplay="{{ displayStyle }}" data-baseurl="{{ baseurlJSON }}" class="collections-grid-block-data"></div>
+        </div>
       </div>
     </collection-grid>
   </div>
