--- a/css/block/hero-unit.css
+++ b/css/block/hero-unit.css
@@ -164,50 +164,50 @@
 
 /* Typography fixes for titles */
 
-.block.bs-background-none .block-title-text {
+.block-hero-unit.bs-background-none .block-title-text {
   color: var(--ucb-black);
 }
 
-.block.bs-background-white .block-title-text {
+.block-hero-unit.bs-background-white .block-title-text {
   color: var(--ucb-black);
 }
 
-.block.bs-background-gray .block-title-text {
+.block-hero-unit.bs-background-gray .block-title-text {
   color: var(--ucb-black);
 }
 
-.block.bs-background-dark-gray .block-title-text {
+.block-hero-unit.bs-background-dark-gray .block-title-text {
   color: var(--ucb-white);
 }
 
-.block.bs-background-tan .block-title-text {
+.block-hero-unit.bs-background-tan .block-title-text {
   color: var(--ucb-black);
 }
 
-.block.bs-background-light-blue .block-title-text {
+.block-hero-unit.bs-background-light-blue .block-title-text {
   color: var(--ucb-black);
 }
 
-.block.bs-background-medium-blue .block-title-text {
+.block-hero-unit.bs-background-medium-blue .block-title-text {
   color: var(--ucb-black);
 }
 
-.block.bs-background-dark-blue .block-title-text {
+.block-hero-unit.bs-background-dark-blue .block-title-text {
   color: var(--ucb-white);
 }
 
-.block.bs-background-light-green .block-title-text {
+.block-hero-unit.bs-background-light-green .block-title-text {
   color: var(--ucb-black);
 }
 
-.block.bs-background-brick .block-title-text {
+.block-hero-unit.bs-background-brick .block-title-text {
   color: var(--ucb-white);
 }
 
-.block.bs-background-outline .block-title-text {
+.block-hero-unit.bs-background-outline .block-title-text {
   color: inherit;
 }
 
-.block.bs-background-underline .block-title-text {
+.block-hero-unit.bs-background-underline .block-title-text {
   color: inherit;
 }
