CuBoulder/tiamat-theme#965 Updates `content-grid.css`

--- a/css/block/content-grid.css
+++ b/css/block/content-grid.css
@@ -8,16 +8,12 @@
   margin-bottom: 1.5em;
 }
 
-.content-grid-block .grid-image-container {
-  padding-bottom: 1em;
-}
-
 .content-grid-block .grid-text-container {
   padding-bottom: 1em;
 }
 
 .content-grid-block .grid-card .grid-text-container {
-  padding: 0 1em 1em 1em;
+  padding: 1em 1em 0 1em;
 }
 
 .content-grid-block .grid-fill {
