--- a/css/ucb-site-contact-info-footer.css
+++ b/css/ucb-site-contact-info-footer.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
 .ucb-site-contact-info-footer-left {
@@ -20,7 +21,7 @@
   margin-right: 2em;
 }
 
-.ucb-site-contact-info-footer-general, .ucb-site-contact-info-footer-emails, .ucb-site-contact-info-footer-phones {
+.ucb-site-contact-info-footer-emails, .ucb-site-contact-info-footer-phones {
   margin: 10px 0;
 }
 
