Video Hero: restores draggability in LB

--- a/templates/block/block--video-hero-unit.html.twig
+++ b/templates/block/block--video-hero-unit.html.twig
@@ -75,7 +75,7 @@
 	{% endif %}
 {% endif %}
 
-<div class="ucb-hero-outer-wrapper">
+<div {{attributes.addClass("ucb-hero-outer-wrapper")}}>
   {# Block/Title/Icon Styles #}
   {% set blockStyles = [
 	content.field_bs_background_style|render|striptags|trim,
@@ -91,7 +91,7 @@
   {% set headingTag = content.field_bs_heading|render|striptags|trim %}
   {% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
 
-  <div{{attributes.addClass(classes,blockStyles)}}>
+  <div class="{{ classes|join(' ') }} {{ blockStyles|join(' ') }}">
     {{ title_prefix }}
     {% if label %}
       <div class="block-title {{ headingStyle }}">
@@ -106,7 +106,7 @@
       </div>
     {% endif %}
     {{ title_suffix }}
-			<div{{attributes.addClass(classes,size,overlayClass,videoClass,containerSize).setAttribute("style","#{bgValue}")}}>
+			<div class="{{ classes|join(' ') }} {{size}} {{overlayClass}} {{videoClass}} {{containerSize}}" style="{{ bgValue }}">
 				{% if videoURL is defined %}
 					<div hidden class="ucb-hero-unit-video-wrapper">
 						<div class="hero-unit-video-overlay"></div>
