--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 /**** GLOBAL STYLES ******/
 :root {
   --ucb-gold: #cfb87b;
-  --ucb-light-gold: #F1EBD9;
+  --ucb-light-gold: #f1ebd9;
   --ucb-link: #0277bd;
   --ucb-link-visited: #e51c23;
-  --ucb-link-dark: #01579B;
+  --ucb-link-dark: #01579b;
   --ucb-white: #fff;
   --ucb-black: #222;
   --ucb-darker: #333;
@@ -13,29 +13,30 @@
   --ucb-dark-gray: #424242;
   --ucb-light-gray: #eee;
   --ucb-light-blue: #e1f5fe;
-  --ucb-medium-blue: #4FC3F7;
-  --ucb-dark-blue: #01579B; 
-  --ucb-light-green: #DCEDC8;
-  --ucb-brick: #AE5A39;
-  --ucb-amber: #FFF9C4;
+  --ucb-medium-blue: #4fc3f7;
+  --ucb-dark-blue: #01579b;
+  --ucb-light-green: #dcedc8;
+  --ucb-brick: #ae5a39;
+  --ucb-amber: #fff9c4;
+  --ucb-alert: #ffebee;
 }
 
 /* Needed for Font Awesome  */
- @font-face {
-    font-family: 'Font Awesome 6 Free - Brands';
-    src: url('../css/webfonts/fa-brands-400.woff2') format('woff2'), 
+@font-face {
+  font-family: "Font Awesome 6 Free - Brands";
+  src: url("../css/webfonts/fa-brands-400.woff2") format("woff2");
 }
- @font-face {
-    font-family: 'Font Awesome 6 Free - Solid';
-    src: url('../css/webfonts/fa-solid-900.woff2') format('woff2'), 
+@font-face {
+  font-family: "Font Awesome 6 Free - Solid";
+  src: url("../css/webfonts/fa-solid-900.woff2") format("woff2");
 }
- @font-face {
-    font-family: 'Font Awesome 6 Free - Regular';
-    src: url('../css/webfonts/fa-regular-400.woff2') format('woff2'), 
+@font-face {
+  font-family: "Font Awesome 6 Free - Regular";
+  src: url("../css/webfonts/fa-regular-400.woff2") format("woff2");
 }
- @font-face {
-    font-family: 'Font Awesome 6 Free - v4';
-    src: url('../css/webfonts/fa-v4compatibility.woff2')  format('woff2'), 
+@font-face {
+  font-family: "Font Awesome 6 Free - v4";
+  src: url("../css/webfonts/fa-v4compatibility.woff2") format("woff2");
 }
 
 body {
@@ -96,11 +97,11 @@ input[type="submit"] {
   color: #565656;
 }
 
-.ucb-local-tasks li>a {
+.ucb-local-tasks li > a {
   color: var(--ucb-light-contrast);
-  display:inline-block;
-  width:100%;
-  height:100%;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
 
 .ucb-homepage-footer a:hover {
@@ -124,21 +125,12 @@ input[type="submit"] {
 
 /********* Fonts *************/
 .ucb-roboto-bold {
-  font-family:
-    Roboto,
-    "Helvetica Neue",
-    Helvetica,
-    Arial,
-    sans-serif;
+  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold;
 }
 
 .ucb-roboto-condensed-bold {
-  font-family:
-    "Roboto Condensed",
-    "Helvetica Neue",
-    Helvetica,
-    Arial,
+  font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
   font-weight: bold;
 }
@@ -178,8 +170,8 @@ input[type="submit"] {
 
 .alert-danger {
   --bs-alert-color: white !important;
-  --bs-alert-bg: #E41B23 !important;
-  --bs-alert-border-color: #E41B23;
+  --bs-alert-bg: #e41b23 !important;
+  --bs-alert-border-color: #e41b23;
   font-weight: 600;
 }
 
@@ -194,7 +186,7 @@ input[type="submit"] {
   margin-left: 5px;
 }
 
-.ucb-alert-link>svg {
+.ucb-alert-link > svg {
   margin-left: 2px;
 }
 
@@ -214,7 +206,7 @@ header#ucb-header-block {
   flex-grow: 1;
 }
 
-.ucb-header-container>* {
+.ucb-header-container > * {
   flex-grow: 0;
   flex-shrink: 0;
 }
@@ -314,7 +306,7 @@ ul.ucb-main-menu.nav {
   border-bottom: 2px solid #fff;
   font-weight: 600;
   line-height: 2rem;
-  padding: .25rem 1rem;
+  padding: 0.25rem 1rem;
   margin: 2px 0 0 0;
 }
 
@@ -402,10 +394,9 @@ ul.ucb-main-menu.nav {
   transition: background-color 200ms;
 }
 
-.ucb-local-tasks li>a:hover {
+.ucb-local-tasks li > a:hover {
   color: #fff;
 }
-
 
 /********* Footer ***********/
 
@@ -466,12 +457,7 @@ ul.ucb-main-menu.nav {
 .ucb-footer-nav-container .ucb-menu-title {
   color: white;
   font-size: 1.4rem;
-  font-family:
-    "Roboto Condensed",
-    Roboto,
-    "Helvetica Neue",
-    Helvetica,
-    Arial,
+  font-family: "Roboto Condensed", Roboto, "Helvetica Neue", Helvetica, Arial,
     sans-serif;
   font-weight: bold;
 }
@@ -526,7 +512,7 @@ ul.ucb-main-menu.nav {
 .field_media_oembed_video {
   position: relative;
   overflow: hidden;
-  width: 100%; 
+  width: 100%;
   padding-top: 56.25%;
   /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
@@ -558,20 +544,20 @@ div.align-center .field_media_oembed_video {
   object-fit: cover;
   max-width: 100%; /* Stop embed from spanning across columns */
 }
-div.align-right .field_media_oembed_video{
+div.align-right .field_media_oembed_video {
   margin-left: 20px;
   margin-bottom: 20px;
 }
-div.align-left .field_media_oembed_video{
+div.align-left .field_media_oembed_video {
   margin-right: 20px;
   margin-bottom: 20px;
 }
-div.align-center .field_media_oembed_video{
+div.align-center .field_media_oembed_video {
   margin-right: auto;
   margin-left: auto;
 }
-div.align-center .field_media_oembed_video iframe, 
-div.align-right .field_media_oembed_video iframe, 
+div.align-center .field_media_oembed_video iframe,
+div.align-right .field_media_oembed_video iframe,
 div.align-left .field_media_oembed_video iframe {
   position: static; /* Reset position */
   top: auto; /* Reset top position */
@@ -583,52 +569,52 @@ div.align-left .field_media_oembed_video iframe {
   max-width: 100%;
 }
 /* Responsive sizing for overriding inserted video media if aligned/floated */
-@media only screen and (max-width:980px) {
+@media only screen and (max-width: 980px) {
   div.align-center .field_media_oembed_video,
   div.align-left .field_media_oembed_video,
   div.align-right .field_media_oembed_video {
     width: 400px;
     height: 275px;
   }
-  
-  div.align-center .field_media_oembed_video iframe, 
-  div.align-right .field_media_oembed_video iframe, 
+
+  div.align-center .field_media_oembed_video iframe,
+  div.align-right .field_media_oembed_video iframe,
   div.align-left .field_media_oembed_video iframe {
     width: 400px;
     height: 275px;
   }
 
-  div.align-center:has(.field_media_oembed_video){
+  div.align-center:has(.field_media_oembed_video) {
     width: fit-content;
   }
 
-  div.align-right .field_media_oembed_video{
+  div.align-right .field_media_oembed_video {
     margin-left: 10px;
     margin-bottom: 10px;
   }
-  div.align-left .field_media_oembed_video{
+  div.align-left .field_media_oembed_video {
     margin-right: 10px;
-    margin-bottom:10px;
+    margin-bottom: 10px;
   }
 }
-@media only screen and (max-width:530px) {
+@media only screen and (max-width: 530px) {
   /* div.align-center .field_media_oembed_video, */
   div.align-left .field_media_oembed_video,
   div.align-right .field_media_oembed_video {
-    width: 100%
+    width: 100%;
   }
-  
+
   /* div.align-center .field_media_oembed_video iframe,  */
-  div.align-right .field_media_oembed_video iframe, 
+  div.align-right .field_media_oembed_video iframe,
   div.align-left .field_media_oembed_video iframe {
     width: 100%;
-    display:block
+    display: block;
   }
 
   div.align-right .field_media_oembed_video,
-  div.align-left .field_media_oembed_video{
+  div.align-left .field_media_oembed_video {
     margin-left: 0px;
-    margin-right:0px;
+    margin-right: 0px;
   }
 }
 
@@ -645,8 +631,8 @@ article .align-left .media-image-caption p {
 }
 
 /* Adjusts list elements when a left-floated image (.align-left) is a preceeding sibling, aligns list indicators with other elements  */
-.align-left+ol,
-.align-left+ul {
+.align-left + ol,
+.align-left + ul {
   right: -1em;
   position: relative;
 }
@@ -700,7 +686,6 @@ p.lead strong {
   font-weight: bold;
 }
 
-
 p.hero {
   font-size: 200%;
   line-height: 1.3;
@@ -709,9 +694,9 @@ p.hero {
 
 p.hero strong {
   font-weight: 700;
-  font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
 }
-
 
 p.supersize {
   font-size: 320%;
@@ -721,10 +706,11 @@ p.supersize {
 
 p.supersize strong {
   font-weight: 700;
-  font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
 }
 
-ul.list-style-underline>li {
+ul.list-style-underline > li {
   list-style: none;
 }
 
@@ -734,18 +720,16 @@ ul.list-style-underline {
   padding-left: 0;
 }
 
-
 ul.list-style-nobullet {
   list-style: none;
   list-style-image: none;
   padding-left: 0;
 }
 
-ul.list-style-nobullet>li {
+ul.list-style-nobullet > li {
   list-style: none;
   list-style-image: none;
 }
-
 
 ul.list-style-border {
   list-style: none;
@@ -754,7 +738,7 @@ ul.list-style-border {
   border-top: 1px solid rgba(128, 128, 128, 0.333);
 }
 
-ul.list-style-border>li {
+ul.list-style-border > li {
   list-style: none;
   border: 1px solid rgba(128, 128, 128, 0.333);
   border-top: none;
@@ -775,12 +759,12 @@ ul.list-style-icon-6 {
   overflow: hidden;
 }
 
-ul.list-style-icon-1>li,
-ul.list-style-icon-2>li,
-ul.list-style-icon-3>li,
-ul.list-style-icon-4>li,
-ul.list-style-icon-5>li,
-ul.list-style-icon-6>li {
+ul.list-style-icon-1 > li,
+ul.list-style-icon-2 > li,
+ul.list-style-icon-3 > li,
+ul.list-style-icon-4 > li,
+ul.list-style-icon-5 > li,
+ul.list-style-icon-6 > li {
   list-style: none !important;
   list-style-image: none !important;
   position: relative;
@@ -799,60 +783,60 @@ ul.list-style-icon-6 li:before {
   color: #cfb87c;
 }
 
-ul.list-style-icon-1>li:before,
-ul.list-style-icon-check>li:before {
-  content: '\f00c';
+ul.list-style-icon-1 > li:before,
+ul.list-style-icon-check > li:before {
+  content: "\f00c";
   font-weight: 900;
 }
 
-ul.list-style-icon-2>li:before,
-ul.list-style-icon-checkbox>li:before {
-  content: '\f14a';
+ul.list-style-icon-2 > li:before,
+ul.list-style-icon-checkbox > li:before {
+  content: "\f14a";
   font-weight: 900;
 }
 
-ul.list-style-icon-3>li:before,
-ul.list-style-icon-angle-double>li:before {
-  content: '\f101';
+ul.list-style-icon-3 > li:before,
+ul.list-style-icon-angle-double > li:before {
+  content: "\f101";
   font-weight: 900;
 }
 
-ul.list-style-icon-4>li:before,
-ul.list-style-icon-circle-arrow>li:before {
-  content: '\f0a9';
+ul.list-style-icon-4 > li:before,
+ul.list-style-icon-circle-arrow > li:before {
+  content: "\f0a9";
   font-weight: 900;
 }
 
-ul.list-style-icon-5>li:before,
-ul.list-style-icon-star>li:before {
-  content: '\f005';
+ul.list-style-icon-5 > li:before,
+ul.list-style-icon-star > li:before {
+  content: "\f005";
   font-weight: 900;
 }
 
-ul.list-style-icon-6>li:before,
-ul.list-style-icon-finger>li:before {
-  content: '\f0a4';
+ul.list-style-icon-6 > li:before,
+ul.list-style-icon-finger > li:before {
+  content: "\f0a4";
   font-weight: 900;
 }
 
 /* ORDERED LIST STYLES */
 ol.list-style-alpha-upper,
-ol.list-style-alpha-upper>li {
+ol.list-style-alpha-upper > li {
   list-style: upper-alpha;
 }
 
 ol.list-style-alpha-lower,
-ol.list-style-alpha-lower>li {
+ol.list-style-alpha-lower > li {
   list-style: lower-alpha;
 }
 
 ol.list-style-roman-upper,
-ol.list-style-roman-upper>li {
+ol.list-style-roman-upper > li {
   list-style: upper-roman;
 }
 
 ol.list-style-roman-lower,
-ol.list-style-roman-lower>li {
+ol.list-style-roman-lower > li {
   list-style: lower-roman;
 }
 
@@ -915,7 +899,9 @@ div.table-vertical table td {
 }
 
 /* Needed for the Newsletter */
-#email-preview table, #email-preview tr, #email-preview td{
+#email-preview table,
+#email-preview tr,
+#email-preview td {
   border: none;
 }
 
@@ -952,7 +938,7 @@ fieldset:not(.fieldgroup) legend {
   float: none;
   width: auto;
   margin: 0;
-  padding: 0 .5em 0 .5em;
+  padding: 0 0.5em 0 0.5em;
 }
 
 input.form-text,
@@ -990,17 +976,17 @@ form label {
   display: inline;
 }
 
-form input[type="checkbox"]+label,
-form input[type="radio"]+label {
+form input[type="checkbox"] + label,
+form input[type="radio"] + label {
   display: inline-block;
   font-weight: normal;
 }
 
 /* Needed to override basic button styles */
-.node-basic-page-layout-builder-form > .form-actions#edit-actions{
-  background-color: var(--ucb-link)
+.node-basic-page-layout-builder-form > .form-actions#edit-actions {
+  background-color: var(--ucb-link);
 }
-.node-basic-page-layout-builder-form > #edit-actions{
+.node-basic-page-layout-builder-form > #edit-actions {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -1009,56 +995,62 @@ form input[type="radio"]+label {
   margin-bottom: 0px;
 }
 .node-basic-page-layout-builder-form > #edit-actions .button.button-gold,
-.node-basic-page-layout-builder-form > #edit-actions .button{
+.node-basic-page-layout-builder-form > #edit-actions .button {
   color: white !important;
   display: inline-block;
-    padding: 10px 20px;
-    font-weight: normal;
-    transition: background-color 0.5s ease;
-    margin: 10px 5px;
-    text-decoration: none !important;
-    -webkit-border-radius: none !important;
-    -moz-border-radius: none !important;
-    border-radius: 0px !important;
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    transition: -webkit-box-shadow 0.5s ease, background-color 0.5s ease, color 0.5s ease;
-    transition: -moz-box-shadow 0.5s ease, background-color 0.5s ease, color 0.5s ease;
-    transition: box-shadow 0.5s ease, background-color 0.5s ease, color 0.5s ease;
-    background-color: inherit;
-    text-wrap: wrap;
+  padding: 10px 20px;
+  font-weight: normal;
+  transition: background-color 0.5s ease;
+  margin: 10px 5px;
+  text-decoration: none !important;
+  -webkit-border-radius: none !important;
+  -moz-border-radius: none !important;
+  border-radius: 0px !important;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  transition: -webkit-box-shadow 0.5s ease, background-color 0.5s ease,
+    color 0.5s ease;
+  transition: -moz-box-shadow 0.5s ease, background-color 0.5s ease,
+    color 0.5s ease;
+  transition: box-shadow 0.5s ease, background-color 0.5s ease, color 0.5s ease;
+  background-color: inherit;
+  text-wrap: wrap;
 }
 
-.node-basic-page-layout-builder-form > #edit-actions div.form-type-checkbox{
+.node-basic-page-layout-builder-form > #edit-actions div.form-type-checkbox {
   background-color: white;
 }
 .node-basic-page-layout-builder-form > #edit-actions .button.button-gold:hover,
-.node-basic-page-layout-builder-form > #edit-actions .button:hover{
+.node-basic-page-layout-builder-form > #edit-actions .button:hover {
   background-color: rgba(255 255 255 / 15%);
   transition: background-color 200ms;
 }
-.node-basic-page-layout-builder-form > #edit-actions .form-item{
+.node-basic-page-layout-builder-form > #edit-actions .form-item {
   margin-top: 0;
   margin-bottom: 0;
   padding: 15px 15px;
 }
 
-.node-basic-page-layout-builder-form > #edit-actions div#edit-preview-toggle{
+.node-basic-page-layout-builder-form > #edit-actions div#edit-preview-toggle {
   width: 100%;
 }
 
-.node-basic-page-layout-builder-form > #edit-actions #layout-builder-content-preview{
+.node-basic-page-layout-builder-form
+  > #edit-actions
+  #layout-builder-content-preview {
   margin-left: 10px;
 }
 
-.node-basic-page-layout-builder-form > #edit-actions .button#edit-submit{
+.node-basic-page-layout-builder-form > #edit-actions .button#edit-submit {
   font-weight: bold !important;
 }
-.node-basic-page-layout-builder-form > #edit-actions .button#edit-rebuild-layout{
+.node-basic-page-layout-builder-form
+  > #edit-actions
+  .button#edit-rebuild-layout {
   display: none !important;
 }
 
@@ -1080,14 +1072,14 @@ table.table-sort {
 }
 
 button.tabledrag-toggle-weight {
-  font-size: .75em;
-  padding: 0 .75em;
+  font-size: 0.75em;
+  padding: 0 0.75em;
   margin-bottom: 1em;
 }
 
 .draggable a.tabledrag-handle {
   height: auto;
-  margin-left: -.5em;
+  margin-left: -0.5em;
 }
 
 a.tabledrag-handle .handle {
