CuBoulder/tiamat-theme#985 Updates gutter padding of the site footer

--- a/templates/regions/region--site-information.html.twig
+++ b/templates/regions/region--site-information.html.twig
@@ -15,7 +15,7 @@
 
 {% if content %}
   {% if ucb_be_boulder == '1' %}
-    <div class="be-boulder-container">
+    <div class="be-boulder-container row gx-4 gy-4">
       <div class="col-lg-8 col-md-8 col-sm-6 col-xs-12">
         {{ content }}
       </div>
