--- a/templates/field/field--field-bs-icon.html.twig
+++ b/templates/field/field--field-bs-icon.html.twig
@@ -7,5 +7,5 @@
     {% set firstIconHtml = firstIconHtml|replace({(attribute): ''}) %}
   {% endfor %}
 
-  {{ firstIconHtml|t }}
+  {{ firstIconHtml|raw }}
 {% endfor %}
