--- a/css/block/content-row.css
+++ b/css/block/content-row.css
@@ -30,7 +30,7 @@
   flex-direction: column;
   margin-bottom: 20px;
 }
-.row-text-container-tile{ 
+.row-text-container-tile{
   padding: 80px 40px
 }
 
@@ -110,13 +110,13 @@
 }
 
 .ucb-teaser-lg-row{
-  align-items: center;
+  align-items: flex-start;
   margin-bottom: 20px;
   flex-direction: row-reverse;
 }
 
 .ucb-teaser-lg-row.ucb-teaser-lg-alternate{
-  align-items: center;
+  align-items: flex-start;
   margin-bottom: 20px;
   flex-direction: inherit;
 }
